[project]
name = "radialattn"
description = "RadialAttention in ComfyUI native workflow"
version = "1.0.0"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/woct0rdho/ComfyUI-RadialAttn"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/woct0rdho/ComfyUI-RadialAttn/wiki"
"Bug Tracker" = "https://github.com/woct0rdho/ComfyUI-RadialAttn/issues"

[tool.comfy]
PublisherId = "woctordho"
DisplayName = "ComfyUI-RadialAttn"
Icon = ""
includes = []
"requires-comfyui" = ">=0.5.0"
